stylesheets/application.css
/* Fonts */

@font-face {
  font-family: "Fakt Soft";
  font-style: normal;
  font-weight: normal;
  src: url(/fonts/FaktSoftPro-Normal.woff) format("woff");
}

@font-face {
  font-family: "Fakt Soft";
  font-style: normal;
  font-weight: bold;
  src: url(/fonts/FaktSoftPro-SemiBold.woff) format("woff");
}

/* General typography */

html {
  font-family: "Fakt Soft", "Helvetica", sans-serif;
  font-size: 18px;
  color: #333;
  line-height: 1.5;
}

a {
  text-decoration: none;
  color: #06a;
}

a:hover,
a:focus {
  text-decoration: underline;
}

.action-link {
  color: #333;
  text-align: center;
  font-size: 0.9em;
}

.action-link:hover,
.action-link:focus {
  text-decoration: none;
}

h1 {
  font-size: 1.8em;
}

h2 {
  font-size: 1.5em;
}

h3 {
  font-size: 1.2em;
}

h2 > img,
h3 > img {
  width: auto !important;
  margin-left: 0 !important;
  height: 0.6em;
}

/* Homepage typography */

header h1 {
  line-height: 1.3;
  text-align: center;
  margin: 0.2em 0 0 0;
}

section h2 {
  text-align: center;
  margin-top: 0;
}

.highlights li {
  text-align: center;
}

.spelkosmos {
  color: #fff;
}

.spelkosmos .action-link {
  color: #fff;
}

.spelkosmos img {
  vertical-align: middle;
  transform: translate3d(0, 0, 0);
}

.limepark {
  color: #fff;
}

.limepark .action-link {
  color: #fff;
}
/* Homepage responsive typography */

@media (min-width: 32.8em) {
  header h1 {
    margin: 0;
  }

  header p {
    margin-top: 0;
    text-align: center;
  }
}

/* Subpages typography */

pre code {
  font-family: monaco, Consolas, "Lucida Console", monospace;
  font-size: 0.875em;
}

/* General layout */

body {
  margin: 0 auto;
  max-width: 35em;
}

a {
  /* Disable tap highlighting on touch devices. */
  -webkit-tap-highlight-color: rgba(0,0,0,0);
}

a:hover,
a:focus,
button:hover,
button:focus,
input:hover,
input:focus {
  /* Remove browser specified outlines. */
  outline: none;
}

/* Homepage layout */

header {
  padding: 1em 0;
  margin: 0 1em;
  overflow: auto;
  border-bottom: solid 2px #d3d3d3;
}

header img {
  float: left;
  margin-bottom: 1em;
}

header p {
  clear: both;
}

.extra-copy,
.hidden {
  display: none;
}

section {
  padding: 1em;
  overflow: auto;
}

.action-link {
  background: rgba(0, 0, 0, 0.2);
  border: solid 2px rgba(0, 0, 0, 0);
  display: block;
  padding: 0.2em 1em;
  border-radius: 1em;
  float: right;
  transition: border 0.4s;
}

.action-link:hover,
.action-link:focus {
  border: solid 2px rgba(0, 0, 0, 0.3);
}

.highlights {
  list-style-type: none;
  padding: 0;
  overflow: auto;
}

.highlights li {
  box-sizing: border-box;
  width: 33%;
  float: left;
  padding: 0.1em;
}

.highlights img {
  border: none;
  display: block;
  margin: 0 auto;
  transform: translate3d(0, 0, 0);
}

.highlights a {
  display: block;
}

.spelkosmos {
  background: #00042f;
}

.limepark {
  background: #8fac21;
}

.spelkosmos .action-link {
  background: rgba(255, 255, 255, 0.2);
}

.spelkosmos .action-link:hover,
.spelkosmos .action-link:focus {
  border: solid 2px rgba(255, 255, 255, 0.3);
}

/* Homepage responsive layout */

@media (min-width: 23em) {
  .extra-copy {
    display: inline;
  }
}

@media (min-width: 32.8em) {
  header p {
    clear: none;
  }
}

/* Subpages layout */

.archive {
  list-style-type: none;
  padding: 0;
}

.video-wrapper {
  position: relative;
  padding-bottom: 56.25%; /* 16:9 */
  height: 0;
}

.video-wrapper iframe {
  border: 0;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

video {
  height: auto;
  margin-left: -1em;
  width: calc(100% + 2em);
}

article {
  padding: 0 1em;
}

article img {
  width: calc(100% + 2em);
  margin-left: -1em;
}

figure {
  margin: 0;
}

pre {
  overflow-x: auto;
}

footer {
  border-top: solid 2px #d3d3d3;
  padding: 1em 0;
  margin: 1em;
}

.search-form {
  display: flex;
  flex-direction: row;
  margin: 1em 0;
}

.search-field, .search-button {
  font-size: 1em;
  border-radius: 4px;
}

.search-field {
  padding: 10px;
  border: solid 2px #d3d3d3;
  color: #333;
  flex-grow: 1;
}

.search-field:hover,
.search-field:focus {
  border-color: #003c7a;
}

.search-button {
  background: #06a;
  padding: 12px 24px;
  border: none;
  color: #fff;
  flex-shrink: 1;
}

.search-button:hover,
.search-button:focus {
  background: #003c7a;
}

.search-button:active {
  background: #003c7a;
  box-shadow: inset 0 0 4px rgba(0, 0, 0, 0.8);
}

/* Animations */

.attention-seeker {
  animation: rubber-band 1s;
  animation-iteration-count: 1;
}

@keyframes rubber-band {
  from {
    transform: scale3d(1, 1, 1);
  }

  30% {
    transform: scale3d(1.25, 0.75, 1);
  }

  40% {
    transform: scale3d(0.75, 1.25, 1);
  }

  50% {
    transform: scale3d(1.15, 0.85, 1);
  }

  65% {
    transform: scale3d(0.95, 1.05, 1);
  }

  75% {
    transform: scale3d(1.05, 0.95, 1);
  }

  to {
    transform: scale3d(1, 1, 1);
  }
}

